--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "files.encoding": "utf8",
   "files.eol": "\n",
   "files.insertFinalNewline": true,
-  "files.autoGuessEncoding": true
+  "files.autoGuessEncoding": false,
+  "editor.formatOnSave": false,
+  "editor.renderWhitespace": "boundary"
 }
