--- a/_config.yml
+++ b/_config.yml
@@ -48,3 +48,27 @@ author:
   bio: "Sociólogo (Univalle) y Especialista en SIG. Consultor en datos y cartografía aplicada a seguridad, elecciones y gestión pública."
 
 encoding: "utf-8"
+
+
+# --- Colección de consultorías como "proyectos" ---
+collections:
+  consultorias:
+    output: true
+    permalink: /consultorias/:slug/
+
+# --- Plugins útiles soportados por GitHub Pages ---
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+
+# --- Defaults para la colección (no crea layouts nuevos) ---
+defaults:
+  - scope:
+      path: ""
+      type: consultorias
+    values:
+      is_project: true
+
+# --- Opcional: separador de excerpt (primer párrafo) ---
+excerpt_separator: "<!--more-->"
